Restriction operation in Pandas

--- a/restriction.ipynb
+++ b/restriction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4  20100105  -133  -167  9999  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -218,93 +218,116 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>STATION</th>\n",
        "      <th>STATION_NAME</th>\n",
+       "      <th>ELEVATION</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
        "      <th>DATE</th>\n",
        "      <th>TMAX</th>\n",
        "      <th>TMIN</th>\n",
+       "      <th>PRCP</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>13</th>\n",
+       "      <td>GHCND:USC00327027</td>\n",
        "      <td>PETERSBURG 2 N ND US</td>\n",
-       "      <td>20100101</td>\n",
-       "      <td>-178</td>\n",
-       "      <td>-311</td>\n",
+       "      <td>466.3</td>\n",
+       "      <td>48.0355</td>\n",
+       "      <td>-98.01</td>\n",
+       "      <td>20100114</td>\n",
+       "      <td>39</td>\n",
+       "      <td>-72</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>15</th>\n",
+       "      <td>GHCND:USC00327027</td>\n",
        "      <td>PETERSBURG 2 N ND US</td>\n",
-       "      <td>20100102</td>\n",
-       "      <td>-244</td>\n",
-       "      <td>-322</td>\n",
+       "      <td>466.3</td>\n",
+       "      <td>48.0355</td>\n",
+       "      <td>-98.01</td>\n",
+       "      <td>20100116</td>\n",
+       "      <td>22</td>\n",
+       "      <td>-50</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>16</th>\n",
+       "      <td>GHCND:USC00327027</td>\n",
        "      <td>PETERSBURG 2 N ND US</td>\n",
-       "      <td>20100103</td>\n",
-       "      <td>-194</td>\n",
-       "      <td>-289</td>\n",
+       "      <td>466.3</td>\n",
+       "      <td>48.0355</td>\n",
+       "      <td>-98.01</td>\n",
+       "      <td>20100117</td>\n",
+       "      <td>33</td>\n",
+       "      <td>-44</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>17</th>\n",
+       "      <td>GHCND:USC00327027</td>\n",
        "      <td>PETERSBURG 2 N ND US</td>\n",
-       "      <td>20100104</td>\n",
-       "      <td>-167</td>\n",
-       "      <td>-200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>PETERSBURG 2 N ND US</td>\n",
-       "      <td>20100105</td>\n",
-       "      <td>-133</td>\n",
-       "      <td>-167</td>\n",
+       "      <td>466.3</td>\n",
+       "      <td>48.0355</td>\n",
+       "      <td>-98.01</td>\n",
+       "      <td>20100118</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-172</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           STATION_NAME      DATE  TMAX  TMIN\n",
-       "0  PETERSBURG 2 N ND US  20100101  -178  -311\n",
-       "1  PETERSBURG 2 N ND US  20100102  -244  -322\n",
-       "2  PETERSBURG 2 N ND US  20100103  -194  -289\n",
-       "3  PETERSBURG 2 N ND US  20100104  -167  -200\n",
-       "4  PETERSBURG 2 N ND US  20100105  -133  -167"
+       "              STATION          STATION_NAME  ELEVATION  LATITUDE  LONGITUDE  \\\n",
+       "13  GHCND:USC00327027  PETERSBURG 2 N ND US      466.3   48.0355     -98.01   \n",
+       "15  GHCND:USC00327027  PETERSBURG 2 N ND US      466.3   48.0355     -98.01   \n",
+       "16  GHCND:USC00327027  PETERSBURG 2 N ND US      466.3   48.0355     -98.01   \n",
+       "17  GHCND:USC00327027  PETERSBURG 2 N ND US      466.3   48.0355     -98.01   \n",
+       "\n",
+       "        DATE  TMAX  TMIN  PRCP  \n",
+       "13  20100114    39   -72     0  \n",
+       "15  20100116    22   -50     0  \n",
+       "16  20100117    33   -44     0  \n",
+       "17  20100118     6  -172     0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# projection relational operation\n",
-    "df_proj = df[['STATION_NAME', 'DATE', 'TMAX', 'TMIN']]\n",
+    "# restriction relational operation\n",
+    "df_restric = df[df['TMAX'] > 0]\n",
     "\n",
-    "# inspect first 5 lines of the projected dataframe\n",
-    "df_proj.head(5)"
+    "# inspect first 5 lines of the restricted dataframe with TMAX > 0\n",
+    "df_restric.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 31 lines in the dataset.\n",
-      "There are 4 columns in the dataset.\n"
+      "There are 4 lines in the dataset.\n",
+      "There are 9 columns in the dataset.\n"
      ]
     }
    ],
    "source": [
     "# save \n",
-    "df_proj.to_csv('E:/Projects/python-pandas/GHCND_sample_projected.csv')\n",
-    "print(f'There are {len(df_proj)} lines in the dataset.')\n",
-    "print(f'There are {len(df_proj.columns)} columns in the dataset.')"
+    "df_restric.to_csv('E:/Projects/python-pandas/GHCND_sample_restricted.csv')\n",
+    "print(f'There are {len(df_restric)} lines in the dataset.')\n",
+    "print(f'There are {len(df_restric.columns)} columns in the dataset.')"
    ]
   }
  ],
@@ -324,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
